trying to fix a css issue on mobile

--- a/src/components/MobileNav/MobileNav.css
+++ b/src/components/MobileNav/MobileNav.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 1.5em;
   left: 1.5em;
-  z-index: 99;
+  z-index: 9999;
   gap: 0.25em;
 }
 
